# i3-switcher-x11

./: Cargo.toml  LICENSE  README.md  build.rs  config.sh  ms.sh
.github/: FUNDING.yml
src/: cmd.rs  i3wm.rs  main.rs  screenshot.rs  state.rs  ui.rs  x11_listener.rs
src/ui/: mod.rs  style.rs  tabs.rs
src/x11/: listener.rs
