[package]
name = "i3-switcher-x11"
version = "0.1.1"
edition = "2021"
build = "build.rs" 
authors = ["Ion Dodon <iondodon2@gmail.com>"]
description = "An Alt+Tab workspace switcher for i3wm."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
gdk4 = "0.8.0"
gtk4 = "0.8.0"
i3ipc = "0.10.1"
image = "0.24.8"
log = "0.4.20"
x11 = "2.21.0"
tokio = { version = "1.36.0", features = ["full"] }
lazy_static = "1.4.0"

[package.metadata.deb]
maintainer = "Ion Dodon <iondodon2@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = "An Alt+Tab workspace switcher for i3wm."
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/i3-switcher-x11", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]
